added async dependency

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "lodash": "~2.4.1",
     "csv": "~0.3.7",
-    "q": "~1.0.1"
+    "q": "~1.0.1",
+    "async": "^0.7.0"
   }
 }
