--- a/package.json
+++ b/package.json
@@ -26,12 +26,9 @@
     "url": "https://github.com/surgeforward/MLearn.js/issues"
   },
   "dependencies": {
-    "async": "^0.7.0",
     "csv": "~0.3.7",
     "lodash": "~2.4.1",
-    "paralleljs": "^0.2.1",
     "q": "~1.0.1",
-    "timing": "^0.1.3",
-    "webworker-threads": "^0.4.11"
+    "request": "^2.34.0"
   }
 }
