added numeric js dependency

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "csv": "~0.3.7",
     "lodash": "~2.4.1",
     "q": "~1.0.1",
-    "request": "^2.34.0"
+    "request": "^2.34.0,
+    "numeric": "~1.2.6"
   }
 }
